--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -417,7 +417,7 @@
 			através de um atuador mecânico.
 			<br>
 			<br>
-			Existe dois tipos de sistemas de orientação solar:<A HREF="#Ref1"><span>[1]</span></A>
+			Existe dois tipos de sistemas de orientação solar:<A HREF="#_Ref1"><span>[1]</span></A>
 			<div STYLE="margin-left: 40px; margin-right: 20px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
 				<ol>
 					<li>
@@ -437,7 +437,7 @@
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			O projeto em causa pertence a disciplina de <span style="color:green;">Laboratório de Sistemas</span> que da 
 			continuidade as disciplinas de <span style="color:green;">Sistemas Digitais</span> 
-			<A HREF="#Ref9"><span>[9]</span></A>, sendo o foco processadores, micro-controladores e 
+			<A HREF="#_Ref9"><span>[9]</span></A>, sendo o foco processadores, micro-controladores e 
 			<it>Fpga´s</it> (Field programmable arrays). Um Micro-controlador da <it><b> ATmel </b></it> é o que vai 
 			ser usado como o cérebro do sistema, o tipo de sistema de orientação vai ser de um eixo, um servo 
 			motor para simulação de posicionamento e dois sensores LDR 
@@ -447,7 +447,7 @@
 			<br>
 			<br>
 			O motor a ser usado se for numa aplicação real seria de corrente continua de preferência com íman permanente 
-			<A HREF="#Ref2"><span>[2]</span></A> , com uma caixa redutora e sem fim para que quando estiver em estado de 
+			<A HREF="#_Ref2"><span>[2]</span></A> , com uma caixa redutora e sem fim para que quando estiver em estado de 
 			paragem poder se desligar sem perder sua posição, já que se sabe que a melhor maneira de poupar energia é não 
 			a gastar. Como o objetivo é obter o maior rendimento possível pretende-se não haver desperdício, se houve-se 
 			meio de não usar energia para seu posicionamento seria o ideal.
@@ -463,7 +463,7 @@
 			<span style="color:blueviolet;"> Oeste </span> e durante a noite regressa a posição 
 			<span style="color:blue;"> Este </span> para o 
 			dia seguinte, os sistemas antigos tinham uma bateria para esta operação depois do pôr do sol, os novos modelos já não 
-			utilizam bateria mas usam a luz fraca do por do sol para regressar a origem. <A HREF="#Ref1"><span>[1]</span></A>
+			utilizam bateria mas usam a luz fraca do por do sol para regressar a origem. <A HREF="#_Ref1"><span>[1]</span></A>
 			<br>
 			<br>
 			Um dos métodos de orientação solar é usar duas células PV em serie com polarização oposta em ângulo de <math>45 &#xb0; </math> como 
@@ -473,13 +473,13 @@
 		<div ALIGN=CENTER STYLE="margin-left: 12px; margin-right: 100px;">
 			<img src="./image/Sensor_Actuator_Principle.png" width="300" alt="Image Not Found">
 			<br>
-			<b>Principio de Funcionamento Sensor</b> <A HREF="#Ref1"><span>[1]</span></A>
+			<b>Principio de Funcionamento Sensor</b> <A HREF="#_Ref1"><span>[1]</span></A>
 		</div>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
 			Assim o atuador mecânico (motor) recebe o diferencial da corrente fornecida, estando assim sempre orientado a fonte 
 			de luz. A corrente no motor é dada pela expressão &nbsp; $I_m &#x3d; I_1 - I_2 &#x3d; 2 I_o &nbsp; &delta; &nbsp; 
 			Sin(45 &#xb0;) &#x3d; &#x221A; 2 &nbsp; I_o &nbsp; &delta; &nbsp; se &nbsp; &delta; &nbsp; é &nbsp; em &nbsp; radianos. 
-			<A HREF="#Ref1"><span>[1]</span></A>
+			<A HREF="#_Ref1"><span>[1]</span></A>
 			<br>
 			<br>
 			No Projeto não vai ser usado este método mas um análogo utilizando dois sensores LDR também em serie e a <math> 45 &#xb0; </math> 
@@ -622,7 +622,7 @@
 				<TD WIDTH=65% VALIGN=TOP>
 					<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 						Neste projecto foi utilizado um microcontrolador da Atmel especicifamente o 
-						<span style="color:blue;"> Atmega 128 </span> <A HREF="#Ref9"><span>[9]</span></A> <A HREF="#Ref12"><span>[12]</span></A>. Foi usado o programador <span style="color:blue;">Atmel Ice</span>
+						<span style="color:blue;"> Atmega 128 </span> <A HREF="#_Ref9"><span>[9]</span></A> <A HREF="#_Ref12"><span>[12]</span></A>. Foi usado o programador <span style="color:blue;">Atmel Ice</span>
 						também do mesmo fabricante, na qual veio a ser muito útil especialmente em combinação com o 
 						<span style="color:blue;"> Atmel Studio 7 </span>, este tem disponivel programação via <b> ISP </b> e 
 						<b> JTAG </b>.
@@ -860,8 +860,8 @@
 		</p>
 	</div>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		A programação foi feita em <span style="color:gold;"> linguagem C </span> <A HREF="#Ref3"><span>[3]</span></A> 
-		aplicado nos integrados da <span style="color:gold;"> AVR </span> <A HREF="#Ref8"><span>[8]</span></A>.
+		A programação foi feita em <span style="color:gold;"> linguagem C </span> <A HREF="#_Ref3"><span>[3]</span></A> 
+		aplicado nos integrados da <span style="color:gold;"> AVR </span> <A HREF="#_Ref8"><span>[8]</span></A>.
 		<br>
 		Anexado [referências] tem links para literatura acerca destes assuntos.
 	</P>
@@ -930,23 +930,19 @@
 		</TD>
 	</TR>
 </TABLE>
-<section STYLE="background-color:#eeeeee;">
-	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
-		videos:
-		<br>
-		<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
-			<A HREF="still in progress" target="_blank">
-				<IMG SRC="image/board/devboard_1.png" NAME="simulation_1" ALIGN=LEFT WIDTH=200 alt="Image Not Found" BORDER=0>
+<section ALIGHN=LEFT STYLE="background-color:#eeeeee;">
+		<P STYLE="margin-left: 20px; margin-right: 20px; border: 0; padding: 0cm">
+			<IMG SRC="image/board/devboard_1.png" NAME="devboard_1" ALIGN=TOP WIDTH=200 alt="Image Not Found" BORDER=0>
+		</P>
+		<P STYLE="margin-left: 20px; margin-right: 40px; border: 0; padding: 0.1cm">
+			<A HREF="https://drive.google.com/file/d/1K0wjvLPOSmOrYwkwvHgqVDm8r7P8Pk1g/view?usp=sharing" target="_blank">
+				<span STYLE="margin-right: 1cm;"> Video 1 </span>
 			</A>
-		</div>
-	</P>
-	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		evidencias, imagens, fotografias,
-	</P>
-	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		Ainda em progresso.
-	</P>
-	<br>
+			<A HREF="https://drive.google.com/file/d/1tbQD31X5J_zCj-ezyNsJgdHQt8iUtrrZ/view?usp=sharing" target="_blank">
+				<span>Video 2</span>
+			</A>
+			<BR>
+		</P>
 </section>
 <!-- ***Conclusoes*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 >
