--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -936,10 +936,13 @@
 		</P>
 		<P STYLE="margin-left: 20px; margin-right: 40px; border: 0; padding: 0.1cm">
 			<A HREF="https://drive.google.com/file/d/1K0wjvLPOSmOrYwkwvHgqVDm8r7P8Pk1g/view?usp=sharing" target="_blank">
-				<span STYLE="margin-right: 1cm;"> Video 1 </span>
+				<span STYLE="margin-right: 1cm;"> Video RTC + Sensor </span>
 			</A>
 			<A HREF="https://drive.google.com/file/d/1tbQD31X5J_zCj-ezyNsJgdHQt8iUtrrZ/view?usp=sharing" target="_blank">
-				<span>Video 2</span>
+				<span STYLE="margin-right: 1cm;">Video USB FTDI PC</span>
+			</A>
+			<A HREF="https://drive.google.com/file/d/18KCc_u5wR8ikOeees02UZfYcTSPoAgfu/view?usp=sharing" target="_blank">
+				<span>Video DEV BOARD</span>
 			</A>
 			<BR>
 		</P>
