--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -441,8 +441,8 @@
 			<it>Fpga´s</it> (Field programmable arrays). Um Micro-controlador da <it><b> ATmel </b></it> é o que vai 
 			ser usado como o cérebro do sistema, o tipo de sistema de orientação vai ser de um eixo, um servo 
 			motor para simulação de posicionamento e dois sensores LDR 
-			(Light dependent resitor) ligados a uma ponte wheatstone e amplificador de instrumentação para ajuste fino. 
-			Um RTC (Real Time Clock) como ferramenta de posicionamento principal, e disponível um override manual, sendo seus 
+			(Light dependent resitor) ligados a uma <b> ponte wheatstone </b> <A HREF="#_Ref7"><span>[7]</span></A> e 
+			<b> amplificador de instrumentação </b> para ajuste fino. Um RTC (Real Time Clock) como ferramenta de posicionamento principal, e disponível um override manual, sendo seus 
 			dados visíveis num LCD (Liquid crystal display).
 			<br>
 			<br>
