--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -701,12 +701,14 @@
 				</ul>
 			</div>
 		</div>
-		<a href="https://www.ptrobotics.com/" target="_blank">
+		<a href="https://www.ptrobotics.com/" style="margin-right: 1cm;" target="_blank">
 			<it style="margin-left: 40px; color:green; "> https://www.ptrobotics.com/ </it>
 		</a>
-		<br>
-		<a href="https://www.futurlec.com/index.shtml" target="_blank">
+		<a href="https://www.futurlec.com/index.shtml" style="margin-right: 1cm;" target="_blank">
 			<it style="margin-left: 40px; color:green; "> https://www.futurlec.com/index.shtml </it>
+		</a>
+		<a href="https://www.electrofun.pt/" target="_blank">
+			<it style="margin-left: 40px; color:green; "> https://www.electrofun.pt/ </it>
 		</a>
 		<br>
 	</P>
