--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -281,6 +281,7 @@
 	</TR>
 	<TR>
 		<TD COLSPAN=10 HEIGHT=12 BGCOLOR="#ffffff" SDVAL="0" SDNUM="2070;1046;@"> <!-- 3 16% 12 #ffffff -->
+			<!--
 			<P ALIGN=LEFT STYLE="border: none; padding: 0cm">
 				<A HREF="#Testcode">
 					<FONT COLOR="#000000">
@@ -301,6 +302,7 @@
 					</FONT>
 				</A>
 			</P>
+			-->
 		</TD>
 	</TR>
 </TABLE>
@@ -1021,7 +1023,7 @@
 	</P>
 	<br>
 </section>
-<!-- ***Test Code*** -->
+<!-- ***Test Code*** 
 <TABLE STYLE="page-break-before: always" WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD WIDTH=94%>
@@ -1058,6 +1060,8 @@
 		</TD>
 	</TR>
 </TABLE>
+-->
+<!--
 <section STYLE="background-color:#eeeeee;">
 	<p ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; font-size: 95%; border: none; padding: 0cm">
 		<a href="Pages/page_1.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 1 </span></a>
@@ -1071,6 +1075,7 @@
 		<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 9 </span></a>
 	</p>
 </section>
+-->
 <!-- ***Referencias*** -->
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
